<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResistenciaActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="189dp"
        android:layout_height="71dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/res"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/t1"
            android:layout_width="13dp"
            android:layout_height="48dp"

            android:layout_marginLeft="46dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="9dp" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="12dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="9dp" />

        <TextView
            android:id="@+id/t4"
            android:layout_width="12dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="false"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="9dp"
            android:text="" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="12dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="false"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="93dp"
            android:layout_marginTop="9dp"
            android:text="" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tout"
        android:layout_width="130dp"
        android:layout_height="127dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="Resutado"
        android:textSize="15dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout2"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="65dp"
        android:layout_height="414dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rb00"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/cero"
            android:textColor="@color/white"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb01"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/maroon"
            android:text="@string/uno"
            android:checked="true"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb02"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/dos"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb03"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/tres"
            android:onClick="checkButton"
        />

        <RadioButton
            android:id="@+id/rb04"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/yellow"
            android:text="@string/cuatro"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb05"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/cinco"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb06"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/seis"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb07"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/blueviolet"
            android:text="@string/siete"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb08"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/ocho"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb09"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/nueve"
            android:onClick="checkButton"

        />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="65dp"
        android:layout_height="414dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rb10"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/cero"
            android:textColor="@color/white"
            android:checked="true"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb11"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/maroon"
            android:text="@string/uno"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb12"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/dos"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb13"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/tres"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb14"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/yellow"
            android:text="@string/cuatro"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb15"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/cinco"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb16"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/seis"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb17"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/blueviolet"
            android:text="@string/siete"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb18"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/ocho"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/rb19"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/nueve"
            android:onClick="checkButton"
            />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="76dp"
        android:layout_height="129dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButton31"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:onClick="checkButton"
            android:text="@string/dos"

            />

        <RadioButton
            android:id="@+id/radioButton32"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/gold"
            android:checked="true"
            android:onClick="checkButton"

            android:text="@string/cinco"

            />


        <RadioButton
            android:id="@+id/radioButton33"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/silver"
            android:onClick="checkButton"
            android:text="@string/diez"

            />
    </RadioGroup>

    <Button
        android:id="@+id/bCalcular"
        android:layout_width="111dp"
        android:layout_height="98dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup5"
        app:layout_constraintVertical_bias="0.692" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="62dp"
        android:layout_height="412dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup5"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toEndOf="@+id/radioGroup4"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rb20"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="checkButton"
            android:text="@string/exp0"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/rb21"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/maroon"
            android:onClick="checkButton"
            android:text="@string/exp1"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/rb22"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:checked="true"
            android:onClick="checkButton"
            android:text="@string/exp2"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/rb23"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:onClick="checkButton"
            android:text="@string/exp3"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/rb24"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/yellow"
            android:onClick="checkButton"
            android:text="@string/exp4"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/rb25"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:onClick="checkButton"
            android:text="@string/exp5"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/rb26"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:onClick="checkButton"
            android:text="@string/expo6"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/rb27"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/blueviolet"
            android:onClick="checkButton"
            android:text="@string/exp7"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/rb28"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:onClick="checkButton"
            android:text="@string/exp8"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/rb29"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:onClick="checkButton"
            android:text="@string/exp9"
            android:textSize="10dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="86dp"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/tolerancia"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout2"
        app:layout_constraintTop_toBottomOf="@+id/tout" />

</android.support.constraint.ConstraintLayout>